# money-movement-ledger-service

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  risk-review-agent.md  runbook.md  threat-model.md
docs/adr/: 0001-transactional-outbox.md
evals/: risk_review_cases.json
reports/: live_risk_review_smoke.json  risk_review_evaluation.json  risk_review_evaluation.md
scripts/: live_risk_review_smoke.py  run_risk_review_evals.py
src/money_movement/: __init__.py  worker.py
src/money_movement/api/: app.py  schemas.py  security.py
src/money_movement/application/: ports.py  service.py
src/money_movement/domain/: __init__.py  model.py
src/money_movement/infrastructure/: __init__.py  config.py  database.py  outbox.py
src/money_movement/risk_review/: __init__.py  evaluation.py  factory.py  gateway.py  models.py  redaction.py  retrieval.py  workflow.py
src/money_movement/risk_review/policies/: identity-and-screening.md  manual-review.md  model-risk-controls.md
tests/integration/: test_postgres_redis_flow.py
tests/unit/: fakes.py  test_domain.py  test_risk_evaluation_api.py  test_risk_gateway.py  test_risk_review.py  test_service.py
