[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "money-movement-ledger-service"
version = "1.0.0"
description = "Python money-movement backend with double-entry ledger rules, PostgreSQL outbox events, and Redis Streams"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "pydantic-settings>=2.7,<3",
  "redis>=5.2,<7",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
money-movement-worker = "money_movement.worker:main"

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20,<1",
  "httpx>=0.28,<1",
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/money_movement"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires PostgreSQL and Redis"]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["money_movement"]
